# scopescrape_tool

./: .env.template  .gitignore  BACKLOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_START.md  README.md  RECOMMEND_ENGINE.md  data.db-journal  demo-results.csv  demo-results.json  pyproject.toml  ruff.toml
config/: config.yaml.example
src/scopescrape/: __init__.py  __main__.py  cli.py  config.py  log.py  models.py  pipeline.py  recommend.py  storage.py  utils.py  web.py
src/scopescrape/adapters/: __init__.py  base.py  github.py  hackernews.py  indiehackers.py  producthunt.py  reddit.py  stackoverflow.py  twitter.py
src/scopescrape/export/: __init__.py  airtable_exporter.py  base.py  csv_exporter.py  json_exporter.py  parquet_exporter.py
src/scopescrape/scoring/: __init__.py  frequency.py  intensity.py  recency.py  scorer.py  specificity.py
src/scopescrape/signals/: __init__.py  detector.py
src/scopescrape/static/: index.html
tests/: conftest.py
tests/fixtures/: github_responses.json  hn_responses.json  indiehackers_responses.json  producthunt_responses.json  reddit_responses.json  so_responses.json  twitter_responses.json
tests/unit/: test_adapters.py  test_config.py  test_export.py  test_models.py  test_recommend.py  test_scoring.py  test_signals.py  test_storage.py
